Bug 410566 - Help button in "Add Property" dialog does nothing
Summary: Help button in "Add Property" dialog does nothing
Status: RESOLVED FIXED
Alias: None
Product: kdesvn
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KDESvn default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-04 10:47 UTC by Alexander Potashev
Modified: 2019-08-09 19:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2019-08-04 10:47:43 UTC
SUMMARY


STEPS TO REPRODUCE
1. Open a working copy in kdesvn
2. Right-click on an item -> select Properties
3. Click "Add Property" button
4. Click "Help" button

OBSERVED RESULT
Nothing happens.

EXPECTED RESULT
Should open the relevant section of kdesvn handbook.

SOFTWARE/OS VERSIONS
Operating System: Fedora 30
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.59.0
Qt Version: 5.12.4
Kernel Version: 5.1.17-300.fc30.x86_64
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Memory: 15,4 ГиБ

ADDITIONAL INFORMATION
kdesvn 2.0.95
Comment 1 Christian Ehrlicher 2019-08-04 16:24:45 UTC
Fixed with 2.1
Comment 2 Alexander Potashev 2019-08-04 17:02:19 UTC
still not fixed in 2.1.0 (rev: 263ff5fa)
Comment 3 Christian Ehrlicher 2019-08-09 19:47:34 UTC
Git commit 90436ec1642a975ae7284b7b79ac6a5b97585d44 by Christian Ehrlicher.
Committed on 09/08/2019 at 19:30.
Pushed by chehrlic into branch 'master'.

Remove Help button to not confuse the user - it's without functionality
and docbook has no reference for it.

M  +0    -11   src/svnfrontend/editpropsdlg.cpp
M  +0    -1    src/svnfrontend/editpropsdlg.h
M  +1    -1    src/svnfrontend/editpropsdlg.ui
M  +0    -6    src/svnfrontend/propertiesdlg.cpp
M  +0    -1    src/svnfrontend/propertiesdlg.h

https://commits.kde.org/kdesvn/90436ec1642a975ae7284b7b79ac6a5b97585d44