Remove Help button to not confuse the user - it's without functionality and docbook has no reference for it.

BUG: 410566